# LaunchPad

New folder/frontend/: package-lock.json  package.json
New folder/frontend/app/: page.tsx
New folder/frontend/app/api/deposit/: route.ts
New folder/frontend/app/api/deposits/: route.ts
New folder/frontend/components/: DepositList.tsx  LaunchpadForm.tsx
New folder/frontend/lib/: api.ts
backend/: Cargo.toml
backend/src/: main.rs
backend/src/chain/: interface.rs
backend/src/config/: settings.rs
backend/src/deposit/: manager.rs
backend/src/ico/: manager.rs
backend/src/wallet/: handler.rs
frontend/: index.html
frontend/app/: page.tsx
frontend/app/api/deposit/: route.ts
frontend/components/: Header.tsx  LaunchpadForm.tsx
frontend/lib/: api.ts
