[package]
name = "cross-chain-launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
async-trait = "0.1.86"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"] }
